--- a/bmc-examples/pom.xml
+++ b/bmc-examples/pom.xml
@@ -274,10 +274,10 @@
       <groupId>com.oracle.oci.sdk</groupId>
       <artifactId>oci-java-sdk-dataflow</artifactId>
     </dependency>
-    <dependency>
-      <groupId>com.oracle.oci.sdk</groupId>
-      <artifactId>oci-java-sdk-datascience</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>com.oracle.oci.sdk</groupId>-->
+<!--      <artifactId>oci-java-sdk-datascience</artifactId>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>com.oracle.oci.sdk</groupId>
       <artifactId>oci-java-sdk-nosql</artifactId>
@@ -635,10 +635,10 @@
       <artifactId>slf4j-simple</artifactId>
       <version>2.0.3</version>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>com.oracle.oci.sdk</groupId>-->
-<!--      <artifactId>oci-java-sdk-shaded-full</artifactId>-->
-<!--      <version>3.5.1-preview1-20230222.214750-2</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>com.oracle.oci.sdk</groupId>
+      <artifactId>oci-java-sdk-shaded-full</artifactId>
+      <version>3.16.2-preview1-20230606.173829-1</version>
+    </dependency>
   </dependencies>
 </project>
